src/App.scss
@font-face {
	font-family: "inter";
	src: url("../src/assets/fonts/Inter-Light.woff2") format("woff2");
	font-style: normal;
	font-weight: 300;
}

@font-face {
	font-family: "inter";
	src: url("../src/assets/fonts/Inter-Regular.woff2") format("woff2");
	font-style: normal;
	font-weight: 400;
}

@font-face {
	font-family: "inter";
	src: url("../src/assets/fonts/Inter-Medium.woff2") format("woff2");
	font-style: normal;
	font-weight: 500;
}

@font-face {
	font-family: "inter";
	src: url("../src/assets/fonts/Inter-SemiBold.woff2") format("woff2");
	font-style: nomal;
	font-weight: 600;
}

@font-face {
	font-family: "inter";
	src: url("../src/assets/fonts/Inter-Bold.woff2") format("woff2");
	font-style: normal;
	font-weight: 700;
}

@font-face {
	font-family: "inter";
	src: url("../src/assets/fonts/Inter-ExtraBold.woff2") format("woff2");
	font-style: normal;
	font-weight: 800;
}

.App {
	min-width: 500px;
	font-family: inter, Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
	text-decoration: none;
	list-style: none;
	*::-webkit-scrollbar {
		height: 0.6em;
		width: 0.6em;
	}

	*::-webkit-scrollbar-track {
		// box-shadow: ;
		background-color: #22232600;
	}

	*::-webkit-scrollbar-corner {
		background-color: #22232600;
	}

	*::-webkit-scrollbar-thumb {
		background: #878a8c50;
	}

	*::-webkit-scrollbar-thumb:hover {
		background: #878a8c70;
	}
	*::-webkit-scrollbar-thumb:active {
		background: #878a8c90;
	}
}

input[type="search"],
input[type="search"]::-webkit-search-cancel-button {
	appearance: none;
	-webkit-appearance: none;
	border: none;
}

#notes-list {
	a.active {
		transition: all 100ms ease-in-out;
		background-color: #878a8c20;
		border-left-color: #6b7ff2;
		border-left-width: 4px;
	}
}
.side-menu {
	& > *a.active {
		transition: all 100ms ease-in-out;
		background-color: #878a8c20;
		border-left-color: #6b7ff2;
		// border-left-width: 0px;
	}
}

.btn-actions {
	transition: all 150ms ease-in;
	&:hover {
		filter: invert(44%) sepia(55%) saturate(1036%) hue-rotate(202deg)
			brightness(102%) contrast(90%);
	}
}

@media screen and (min-height: 1000px) {
	.split-started {
		flex-direction: column;
		gap: 6;
	}
	#auth-contents {
		h2 {
			font-size: 1.6rem;
			margin-bottom: 0.4em;
		}
		p {
			font-size: 1.2rem;
		}
	}
	#welcome-text {
		h1 {
			font-size: 3rem;
		}
		#greet {
			:first-child {
				font-size: 2rem;
			}
			& > :not(:first-child) {
				font-size: 1.5rem;
			}
		}
	}
}

